examples/datalog/14_aggregations/85_grouped_count.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_grp_count
Knowledge graph 'test_grp_count' created.
Switched to knowledge graph: test_grp_count
> .kg use test_grp_count
Switched to knowledge graph: test_grp_count
> +items[(1, "A"), (2, "B"), (3, "A"), (4, "A"), (5, "B")].
Inserted 5 fact(s) into 'items'.
> +count_by_cat(Cat, <COUNT:Id>) :- items(Id, Cat).
Script error: Parse error: Invalid term: '<COUNT:Id>'
